Use make to build C++, split compile & link phase